# photo_point

./: .env  README.md  manage.py  pyproject.toml
currency/: tests.py  urls.py  views.py
photo_point/: settings.py  urls.py
test_photo_point/: asgi.py  settings.py  urls.py  wsgi.py
